[package]
edition = "2021"
name = "lightningrodlabs_we-rust-utils"
version = "0.300.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
  "napi4",
  "tokio_rt",
  "async",
  "serde-json",
] }
napi-derive = "2.12.2"

# holochain from branch https://github.com/matthme/holochain/commits/feat/set-dna-properties/
holochain_conductor_api = "0.3.1"
holochain_p2p = "0.3.1"
holochain_types = "0.3.1"
lair_keystore_api = "0.4.4"

futures = "0.3"
hex = "0.4.3"
nanoid = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
sha2 = "0.10.8"
url = "2.2"
url2 = "0.0.6"
zip = "0.5.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
